8.2.2
  - Implemented "#57 Analyze database convenience". UPK is formed exclusively for the tables related to the subjects.
  - Implemented "#58 receipt += times"
  - Fixed "#34 Possible Performance-Improvement in CellContentConverter.toSql"
  - Fixed "#59 Retry Deadlock?"

8.2.1
  - Intra-database export: automatic fallback to MERGE on tables without PK has been removed.
  - Increased SQL import performance + progress bar also for compressed files.
  - Logging did not work if the working directory is read-only.
  - Improved error handling.
  - Minor bug fixes.

8.2
  - Fixed "SQLite JDBC: inconsistent internal state" during database analysis.
  - Fixed "#32 SQL analyzer: duplicate associations".
  - Implemented "#51 Reduce transaction sizes"
  - Implemented "#54 Number thousand separators"
  - New option to set the isolation level.
  - Bookmark feature in data browser.

8.1.5
  - New export option "check primary keys" allows checking the validity of manually defined primary keys.
  - New export option "limit transaction sizes" reduces transaction sizes. (Feature request 51)
  - Improved indexing of working tables.
  - JSQLParser has been updated to version 1.3.
  - Fix for bug 32 "SQL analyzer: duplicate associations" 

8.1.1
  - Increased initial responsiveness of the SQL Console.
  - SQL-Console: all requests are now executed in the same connection.
  - Feature Request "#47 Add additional tables adds too much"
    https://sourceforge.net/p/jailer/feature-requests/47/
  - Feature Request "#44 MSSQL export to another DB in same instance"
    https://sourceforge.net/p/jailer/feature-requests/44/
  - Feature Request "#49 Mac shortcuts"
    https://sourceforge.net/p/jailer/feature-requests/49/
  - Feature Request "#50 Option to not to delete too much from entities"
    https://sourceforge.net/p/jailer/feature-requests/50/
  - Improved Cycle Finder component.

8.0.2
  - Increased responsiveness and performance of the SQL Console.

8.0.1